Refactoring to avoid confusion (entry in Hospital file is now Patient rather than Hospital).
Double click in Hospital view to examine payload.

Hospital preference page.  Not yet populated.  This will be were columns to
show are chosen and sequenced.

git-svn-id: https://ctf.open.collab.net/svn/repos/ccf/branches/GUIConsole@2310 6771e1e2-0f46-0410-b5d7-d846ff89f743

--- a/com.collabnet.ccf/plugin.xml
+++ b/com.collabnet.ccf/plugin.xml
@@ -13,6 +13,11 @@
             class="com.collabnet.ccf.preferences.CcfPreferencePage"
             id="com.collabnet.ccf.preferences"
             name="CollabNet Connector Framework"/>
+      <page
+            class="com.collabnet.ccf.preferences.HospitalPreferencePage"
+            id="com.collabnet.ccf.preferences.hospital"
+            category="com.collabnet.ccf.preferences"
+            name="Hospital"/>            
    </extension>
 
    <extension
@@ -49,8 +54,8 @@
    <extension
          point="org.eclipse.ui.popupMenus">                    
       <objectContribution
-            objectClass="com.collabnet.ccf.model.Hospital"
-            id="com.collabnet.ccf.model.Hospital">
+            objectClass="com.collabnet.ccf.model.Patient"
+            id="com.collabnet.ccf.model.Patient">
          <action
                label="Clear"
                class="com.collabnet.ccf.actions.ClearHospitalAction"
