Menu option to open hospital stack trace in text editor.
git-svn-id: https://ctf.open.collab.net/svn/repos/ccf/branches/GUIConsole@2317 6771e1e2-0f46-0410-b5d7-d846ff89f743

--- a/com.collabnet.ccf/plugin.xml
+++ b/com.collabnet.ccf/plugin.xml
@@ -67,6 +67,11 @@
                id="com.collabnet.ccf.actions.ReplayHospitalAction">
          </action> 
          <action
+               label="Stack Trace"
+               class="com.collabnet.ccf.actions.HospitalStackTraceAction"
+               id="com.collabnet.ccf.actions.HospitalStackTraceAction">
+         </action>                   
+         <action
                label="Examine Payload"
                class="com.collabnet.ccf.actions.ExaminePayloadAction"
                id="com.collabnet.ccf.actions.ExaminePayloadAction">
