Enable edit of Hospital payload.
git-svn-id: https://ctf.open.collab.net/svn/repos/ccf/branches/GUIConsole@2335 6771e1e2-0f46-0410-b5d7-d846ff89f743

--- a/com.collabnet.ccf/plugin.xml
+++ b/com.collabnet.ccf/plugin.xml
@@ -72,7 +72,7 @@
                id="com.collabnet.ccf.actions.HospitalStackTraceAction">
          </action>                   
          <action
-               label="Examine Payload"
+               label="Examine/Edit Payload"
                class="com.collabnet.ccf.actions.ExaminePayloadAction"
                id="com.collabnet.ccf.actions.ExaminePayloadAction">
          </action>                          
