Option to set Hospital fixed field back to "false" (Unclear).
git-svn-id: https://ctf.open.collab.net/svn/repos/ccf/branches/GUIConsole@2385 6771e1e2-0f46-0410-b5d7-d846ff89f743

--- a/com.collabnet.ccf/plugin.xml
+++ b/com.collabnet.ccf/plugin.xml
@@ -57,6 +57,11 @@
             objectClass="com.collabnet.ccf.model.Patient"
             id="com.collabnet.ccf.model.Patient">
          <action
+               label="Unclear"
+               class="com.collabnet.ccf.actions.UnclearHospitalAction"
+               id="com.collabnet.ccf.actions.UnclearHospitalAction">
+         </action>                       
+         <action
                label="Clear"
                class="com.collabnet.ccf.actions.ClearHospitalAction"
                id="com.collabnet.ccf.actions.ClearHospitalAction">
