Changes to Hospital view context menu options based on Webex feedback.
Renamed Clear and Unclear to Mark as Fixed and Reopen.

Added a Delete option.

git-svn-id: https://ctf.open.collab.net/svn/repos/ccf/branches/GUIConsole@2386 6771e1e2-0f46-0410-b5d7-d846ff89f743

--- a/com.collabnet.ccf/plugin.xml
+++ b/com.collabnet.ccf/plugin.xml
@@ -57,14 +57,19 @@
             objectClass="com.collabnet.ccf.model.Patient"
             id="com.collabnet.ccf.model.Patient">
          <action
-               label="Unclear"
-               class="com.collabnet.ccf.actions.UnclearHospitalAction"
-               id="com.collabnet.ccf.actions.UnclearHospitalAction">
+               label="Delete"
+               class="com.collabnet.ccf.actions.DeletePatientAction"
+               id="com.collabnet.ccf.actions.DeletePatientAction">
+         </action>                        
+         <action
+               label="Reopen"
+               class="com.collabnet.ccf.actions.ReopenAction"
+               id="com.collabnet.ccf.actions.ReopenAction">
          </action>                       
          <action
-               label="Clear"
-               class="com.collabnet.ccf.actions.ClearHospitalAction"
-               id="com.collabnet.ccf.actions.ClearHospitalAction">
+               label="Mark as Fixed"
+               class="com.collabnet.ccf.actions.MarkFixedAction"
+               id="com.collabnet.ccf.actions.MarkFixedAction">
          </action>              
          <action
                label="Replay"
