--- a/com.collabnet.ccf/plugin.xml
+++ b/com.collabnet.ccf/plugin.xml
@@ -2,6 +2,28 @@
 <?eclipse version="3.2"?>
 <plugin>
 
+   <extension-point id="landscapeContributors" name="CCF Landscape Contributors" schema="schema/landscapeContributors.exsd"/>
+
+   <extension
+         point="com.collabnet.ccf.landscapeContributors">
+      <landscape
+            name="TeamForge/QC"
+            description="Bidirectional TeamForge and QC synchronizations"
+            class="com.collabnet.ccf.TeamForgeQCLandscapeContributor"
+            sequence="10"
+            image="teamForgeQC.png"
+            id="com.collabnet.ccf.TeamForgeQCLandscapeContributor">
+      </landscape> 
+      <landscape
+            name="Project Tracker/QC"
+            description="Bidirectional Project Tracker and QC synchronizations"
+            class="com.collabnet.ccf.ProjectTrackerQCLandscapeContributor"
+            sequence="20"
+            image="projectTrackerQC.png"
+            id="com.collabnet.ccf.ProjectTrackerQCLandscapeContributor">
+      </landscape>         
+   </extension>
+
    <extension
          point="org.eclipse.core.runtime.preferences">
       <initializer class="com.collabnet.ccf.preferences.CcfPreferenceInitializer"/>
