CFF Explorer context menu and delete option.
git-svn-id: https://ctf.open.collab.net/svn/repos/ccf/branches/GUIConsole@2401 6771e1e2-0f46-0410-b5d7-d846ff89f743

--- a/com.collabnet.ccf/plugin.xml
+++ b/com.collabnet.ccf/plugin.xml
@@ -108,7 +108,18 @@
                class="com.collabnet.ccf.actions.ExaminePayloadAction"
                id="com.collabnet.ccf.actions.ExaminePayloadAction">
          </action>                          
-      </objectContribution>                   
+      </objectContribution>
+      
+      <objectContribution
+            objectClass="com.collabnet.ccf.model.Landscape"
+            id="com.collabnet.ccf.model.Landscape">
+         <action
+               label="Delete landscape"
+               class="com.collabnet.ccf.actions.DeleteLandscapeAction"
+               id="com.collabnet.ccf.actions.DeleteLandscapeAction">
+         </action>                                         
+      </objectContribution>        
+                         
    </extension>   
 
 </plugin>
