CCF Explorer View:
Change landscape description option.

Escape slashes in description.

Toolbar refresh button.



git-svn-id: https://ctf.open.collab.net/svn/repos/ccf/branches/GUIConsole@2402 6771e1e2-0f46-0410-b5d7-d846ff89f743

--- a/com.collabnet.ccf/plugin.xml
+++ b/com.collabnet.ccf/plugin.xml
@@ -117,7 +117,13 @@
                label="Delete landscape"
                class="com.collabnet.ccf.actions.DeleteLandscapeAction"
                id="com.collabnet.ccf.actions.DeleteLandscapeAction">
-         </action>                                         
+         </action> 
+         <action
+               label="Change landscape..."
+               class="com.collabnet.ccf.actions.ChangeLandscapeAction"
+               enablesFor="1"
+               id="com.collabnet.ccf.actions.ChangeLandscapeAction">
+         </action>                                                      
       </objectContribution>        
                          
    </extension>   
