Enable export/import of CCF landscapes using Eclipse preferences export/import functionality.
git-svn-id: https://ctf.open.collab.net/svn/repos/ccf/branches/GUIConsole@2418 6771e1e2-0f46-0410-b5d7-d846ff89f743

--- a/com.collabnet.ccf/plugin.xml
+++ b/com.collabnet.ccf/plugin.xml
@@ -28,6 +28,22 @@
          point="org.eclipse.core.runtime.preferences">
       <initializer class="com.collabnet.ccf.preferences.CcfPreferenceInitializer"/>
    </extension>
+   
+   <extension
+         point="org.eclipse.ui.preferenceTransfer">
+       <transfer
+            icon="icons/landscape.gif"
+            name="CCF Landscapes"
+            id="com.collabnet.ccf.preferenceTransfer">
+            <mapping scope="instance">
+                <entry node="com.collabnet.ccf/ccfLandscapes">
+                </entry>
+            </mapping>
+            <description>
+             Export CCF Landscapes
+            </description>
+      </transfer>  
+   </extension> 
 
    <extension
          point="org.eclipse.ui.preferencePages">
