Project Mappings refresh option.
git-svn-id: https://ctf.open.collab.net/svn/repos/ccf/branches/GUIConsole@2449 6771e1e2-0f46-0410-b5d7-d846ff89f743

--- a/com.collabnet.ccf/plugin.xml
+++ b/com.collabnet.ccf/plugin.xml
@@ -158,8 +158,16 @@
          <action
                label="Add project mapping..."
                class="com.collabnet.ccf.actions.AddSynchronizationStatusAction"
+               menubarPath="group.a"
                id="com.collabnet.ccf.actions.AddSynchronizationStatusAction">
-         </action>                                              
+         </action> 
+         <action
+               label="Refresh"
+               class="com.collabnet.ccf.actions.RefreshAction"
+               icon="icons/refresh.gif"
+               menubarPath="group.b"
+               id="com.collabnet.ccf.actions.RefreshAction">
+         </action>                                                              
       </objectContribution> 
       
       <objectContribution
