Change project mapping option.
git-svn-id: https://ctf.open.collab.net/svn/repos/ccf/branches/GUIConsole@2467 6771e1e2-0f46-0410-b5d7-d846ff89f743

--- a/com.collabnet.ccf/plugin.xml
+++ b/com.collabnet.ccf/plugin.xml
@@ -204,7 +204,13 @@
                class="com.collabnet.ccf.actions.DeleteSynchronizationStatusAction"
                menubarPath="group.c"
                id="com.collabnet.ccf.actions.DeleteSynchronizationStatusAction">
-         </action>                                                                               
+         </action> 
+         <action
+               label="Change project mapping..."
+               class="com.collabnet.ccf.actions.ChangeSynchronizationStatusAction"
+               menubarPath="group.c"
+               id="com.collabnet.ccf.actions.ChangeSynchronizationStatusAction">
+         </action>                                                                                              
       </objectContribution>                         
                          
    </extension>   
