Replace Change Landscape, Edit CCF Properties, Edit QC Properties, Edit TeamForge Properties and Edit CEE Properties options with one Edit Landscape (we will eventually change this terminology) option that opens a multi-page editor with tabs for the various property categories.
git-svn-id: https://ctf.open.collab.net/svn/repos/ccf/branches/GUIConsole@2476 6771e1e2-0f46-0410-b5d7-d846ff89f743

--- a/com.collabnet.ccf/plugin.xml
+++ b/com.collabnet.ccf/plugin.xml
@@ -144,12 +144,11 @@
                id="com.collabnet.ccf.actions.DeleteLandscapeAction">
          </action> 
          <action
-               label="Change landscape..."
-               class="com.collabnet.ccf.actions.ChangeLandscapeAction"
-               enablesFor="1"
+               label="Edit landscape"
+               class="com.collabnet.ccf.actions.EditLandscapeAction"
                menubarPath="group.b"
-               id="com.collabnet.ccf.actions.ChangeLandscapeAction">
-         </action>                                                     
+               id="com.collabnet.ccf.actions.EditLandscapeAction">
+         </action>                                                                        
       </objectContribution>
       
       <objectContribution
@@ -213,6 +212,19 @@
          </action>                                                                                              
       </objectContribution>                         
                          
-   </extension>   
+   </extension> 
+   
+   <extension
+         point="org.eclipse.ui.editors">
+      <editor
+            name="CCF Editor"
+            default="false"
+            icon="icons/landscape.gif"
+            extensions="ccf"
+            contributorClass="com.collabnet.ccf.editors.CcfActionBarContributor"
+            class="com.collabnet.ccf.editors.CcfEditor"
+            id="com.collabnet.ccf.editors.CcfEditor">
+      </editor>      
+   </extension>
 
 </plugin>
