Add Logs node to tree.  Log files appear beneath Logs node, with options to open them or delete them.
git-svn-id: https://ctf.open.collab.net/svn/repos/ccf/branches/GUIConsole@2481 6771e1e2-0f46-0410-b5d7-d846ff89f743

--- a/com.collabnet.ccf/plugin.xml
+++ b/com.collabnet.ccf/plugin.xml
@@ -210,7 +210,24 @@
                menubarPath="group.c"
                id="com.collabnet.ccf.actions.ChangeSynchronizationStatusAction">
          </action>                                                                                              
-      </objectContribution>                         
+      </objectContribution>
+      
+      <objectContribution
+            objectClass="com.collabnet.ccf.model.Log"
+            id="com.collabnet.ccf.model.log">  
+         <action
+               label="Open log"
+               class="com.collabnet.ccf.actions.EditLogAction"
+               menubarPath="group.a"
+               id="com.collabnet.ccf.actions.EditLogAction">
+         </action> 
+         <action
+               label="Delete log"
+               class="com.collabnet.ccf.actions.DeleteLogAction"
+               menubarPath="group.c"
+               id="com.collabnet.ccf.actions.DeleteLogAction">
+         </action>                                                                                                  
+      </objectContribution>                                        
                          
    </extension> 
    
