Decouple "Reset synchronization status" and "Delete identity mappings".
git-svn-id: https://ctf.open.collab.net/svn/repos/ccf/branches/GUIConsole@2484 6771e1e2-0f46-0410-b5d7-d846ff89f743

--- a/com.collabnet.ccf/plugin.xml
+++ b/com.collabnet.ccf/plugin.xml
@@ -120,7 +120,7 @@
                id="com.collabnet.ccf.actions.HospitalStackTraceAction">
          </action>                   
          <action
-               label="Examine/Edit Payload"
+               label="Examine quarantined artifact"
                class="com.collabnet.ccf.actions.ExaminePayloadAction"
                id="com.collabnet.ccf.actions.ExaminePayloadAction">
          </action>                          
@@ -179,7 +179,13 @@
                menubarPath="group.a"
                icon="icons/hospitalView.gif"
                id="com.collabnet.ccf.actions.HospitalAction">
-         </action>                    
+         </action>  
+         <action
+               label="Delete identity mappings"
+               class="com.collabnet.ccf.actions.DeleteIdentityMappingsAction"
+               menubarPath="group.b"
+               id="com.collabnet.ccf.actions.DeleteIdentityMappingsAction">
+         </action>                           
          <action
                label="Reset synchronization status"
                class="com.collabnet.ccf.actions.ResetSynchronizationStatusAction"
