Add new project mapping with paused status.  Move new project mapping option to New submenu.
git-svn-id: https://ctf.open.collab.net/svn/repos/ccf/branches/GUIConsole@2488 6771e1e2-0f46-0410-b5d7-d846ff89f743

--- a/com.collabnet.ccf/plugin.xml
+++ b/com.collabnet.ccf/plugin.xml
@@ -155,9 +155,9 @@
             objectClass="com.collabnet.ccf.model.ProjectMappings"
             id="com.collabnet.ccf.model.ProjectMappings">
          <action
-               label="Add project mapping..."
+               label="Project Mapping"
                class="com.collabnet.ccf.actions.AddSynchronizationStatusAction"
-               menubarPath="group.a"
+               menubarPath="group.add/New"
                id="com.collabnet.ccf.actions.AddSynchronizationStatusAction">
          </action> 
          <action
