Cancel replay menu option.
git-svn-id: https://ctf.open.collab.net/svn/repos/ccf/branches/GUIConsole@2512 6771e1e2-0f46-0410-b5d7-d846ff89f743

--- a/com.collabnet.ccf/plugin.xml
+++ b/com.collabnet.ccf/plugin.xml
@@ -123,7 +123,13 @@
                menubarPath="group.b"
                class="com.collabnet.ccf.actions.MarkFixedAction"
                id="com.collabnet.ccf.actions.MarkFixedAction">
-         </action>              
+         </action>
+         <action
+               label="Cancel replay"
+               menubarPath="group.b"
+               class="com.collabnet.ccf.actions.CancelReplayHospitalAction"
+               id="com.collabnet.ccf.actions.CancelReplayHospitalAction">
+         </action>                          
          <action
                label="Replay"
                menubarPath="group.b"
