--- a/com.collabnet.ccf/plugin.xml
+++ b/com.collabnet.ccf/plugin.xml
@@ -93,13 +93,7 @@
          point="org.eclipse.ui.popupMenus">                    
       <objectContribution
             objectClass="com.collabnet.ccf.model.Patient"
-            id="com.collabnet.ccf.model.Patient">
-         <action
-               label="Stack Trace"
-               menubarPath="group.a"
-               class="com.collabnet.ccf.actions.HospitalStackTraceAction"
-               id="com.collabnet.ccf.actions.HospitalStackTraceAction">
-         </action>                    
+            id="com.collabnet.ccf.model.Patient">                 
          <action
                label="Examine quarantined artifact"
                menubarPath="group.a"
@@ -114,31 +108,31 @@
          </action>
          <action
                label="Reopen"
-               menubarPath="group.b"
+               menubarPath="group.c"
                class="com.collabnet.ccf.actions.ReopenAction"
                id="com.collabnet.ccf.actions.ReopenAction">
          </action>                       
          <action
                label="Mark as Fixed"
-               menubarPath="group.b"
+               menubarPath="group.c"
                class="com.collabnet.ccf.actions.MarkFixedAction"
                id="com.collabnet.ccf.actions.MarkFixedAction">
          </action>
          <action
                label="Cancel replay"
-               menubarPath="group.b"
+               menubarPath="group.d"
                class="com.collabnet.ccf.actions.CancelReplayHospitalAction"
                id="com.collabnet.ccf.actions.CancelReplayHospitalAction">
          </action>                          
          <action
                label="Replay"
-               menubarPath="group.b"
+               menubarPath="group.d"
                class="com.collabnet.ccf.actions.ReplayHospitalAction"
                id="com.collabnet.ccf.actions.ReplayHospitalAction">
          </action>                                 
          <action
                label="Delete"
-               menubarPath="group.c"
+               menubarPath="group.e"
                class="com.collabnet.ccf.actions.DeletePatientAction"
                id="com.collabnet.ccf.actions.DeletePatientAction">
          </action>                                                                         
