Reset synchronization to selected date/time or current date/time.
git-svn-id: https://ctf.open.collab.net/svn/repos/ccf/branches/GUIConsole@2517 6771e1e2-0f46-0410-b5d7-d846ff89f743

--- a/com.collabnet.ccf/plugin.xml
+++ b/com.collabnet.ccf/plugin.xml
@@ -205,7 +205,7 @@
                id="com.collabnet.ccf.actions.DeleteIdentityMappingsAction">
          </action>                           
          <action
-               label="Reset synchronization status"
+               label="Reset synchronization status..."
                class="com.collabnet.ccf.actions.ResetSynchronizationStatusAction"
                menubarPath="group.c"
                id="com.collabnet.ccf.actions.ResetSynchronizationStatusAction">
