Logs subfolders for each direction in CCF Explorer.
git-svn-id: https://ctf.open.collab.net/svn/repos/ccf/branches/GUIConsole@2533 6771e1e2-0f46-0410-b5d7-d846ff89f743

--- a/com.collabnet.ccf/plugin.xml
+++ b/com.collabnet.ccf/plugin.xml
@@ -182,6 +182,18 @@
       </objectContribution> 
       
       <objectContribution
+            objectClass="com.collabnet.ccf.model.Logs"
+            id="com.collabnet.ccf.model.Logs">
+         <action
+               label="Refresh"
+               class="com.collabnet.ccf.actions.RefreshAction"
+               icon="icons/refresh.gif"
+               menubarPath="group.b"
+               id="com.collabnet.ccf.actions.RefreshAction">
+         </action>                                                              
+      </objectContribution>       
+      
+      <objectContribution
             objectClass="com.collabnet.ccf.model.SynchronizationStatus"
             id="com.collabnet.ccf.model.SynchronizationStatus">  
          <action
