Create reverse mapping context menu option.
git-svn-id: https://ctf.open.collab.net/svn/repos/ccf/branches/GUIConsole@2534 6771e1e2-0f46-0410-b5d7-d846ff89f743

--- a/com.collabnet.ccf/plugin.xml
+++ b/com.collabnet.ccf/plugin.xml
@@ -203,7 +203,7 @@
                menubarPath="group.a"
                icon="icons/hospitalView.gif"
                id="com.collabnet.ccf.actions.HospitalAction">
-         </action>
+         </action>          
          <action
                label="Edit field mappings"
                class="com.collabnet.ccf.actions.EditWiringsAction"
@@ -245,7 +245,13 @@
                class="com.collabnet.ccf.actions.ChangeSynchronizationStatusAction"
                menubarPath="group.d"
                id="com.collabnet.ccf.actions.ChangeSynchronizationStatusAction">
-         </action>                                                                                              
+         </action>
+         <action
+               label="Create reverse mapping..."
+               class="com.collabnet.ccf.actions.ReverseSynchronizationStatusAction"
+               menubarPath="group.d"
+               id="com.collabnet.ccf.actions.ReverseSynchronizationStatusAction">
+         </action>                                                                                                                
       </objectContribution>
       
       <objectContribution
