CCF plugin branding
git-svn-id: https://ctf.open.collab.net/svn/repos/ccf/branches/GUIConsole@2538 6771e1e2-0f46-0410-b5d7-d846ff89f743

--- a/com.collabnet.ccf/build.properties
+++ b/com.collabnet.ccf/build.properties
@@ -2,7 +2,12 @@ bin.includes = plugin.xml,\
                META-INF/,\
                icons/,\
                lib/,\
-               lib/hsqldb.jar
+               lib/hsqldb.jar,\
+               about.html,\
+               about.ini,\
+               about.properties,\
+               cn_icon.png,\
+               schema/
 jars.compile.order = .
 source.. = src/
 output.. = bin/
