Edit CCF log settings option.
git-svn-id: https://ctf.open.collab.net/svn/repos/ccf/branches/GUIConsole@2539 6771e1e2-0f46-0410-b5d7-d846ff89f743

--- a/com.collabnet.ccf/plugin.xml
+++ b/com.collabnet.ccf/plugin.xml
@@ -160,7 +160,13 @@
                class="com.collabnet.ccf.actions.EditLandscapeAction"
                menubarPath="group.b"
                id="com.collabnet.ccf.actions.EditLandscapeAction">
-         </action>                                                                        
+         </action> 
+         <action
+               label="Edit CCF log settings"
+               class="com.collabnet.ccf.actions.EditLog4jAction"
+               menubarPath="group.c"
+               id="com.collabnet.ccf.actions.EditLog4jAction">
+         </action>                                                                                             
       </objectContribution>
       
       <objectContribution
