Delete identity mapping context menu option.
git-svn-id: https://ctf.open.collab.net/svn/repos/ccf/branches/GUIConsole@2564 6771e1e2-0f46-0410-b5d7-d846ff89f743

--- a/com.collabnet.ccf/plugin.xml
+++ b/com.collabnet.ccf/plugin.xml
@@ -151,6 +151,17 @@
       </objectContribution>
       
       <objectContribution
+            objectClass="com.collabnet.ccf.model.IdentityMapping"
+            id="com.collabnet.ccf.model.IdentityMapping">                                                     
+         <action
+               label="Delete..."
+               menubarPath="group.a"
+               class="com.collabnet.ccf.actions.DeleteIdentityMappingAction"
+               id="com.collabnet.ccf.actions.DeleteIdentityMappingAction">
+         </action>                                                                         
+      </objectContribution>      
+      
+      <objectContribution
             objectClass="com.collabnet.ccf.model.Landscape"
             id="com.collabnet.ccf.model.Landscape">
          <action
