--- a/com.collabnet.ccf/build.properties
+++ b/com.collabnet.ccf/build.properties
@@ -7,7 +7,8 @@ bin.includes = plugin.xml,\
                about.ini,\
                about.properties,\
                cn_icon.png,\
-               schema/
+               schema/,\
+               .
 jars.compile.order = .
 source.. = src/
 output.. = bin/
